--- a/commons/parent/pom.xml
+++ b/commons/parent/pom.xml
@@ -206,6 +206,12 @@
                 <artifactId>sal-binding-util</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>org.opendaylight.controller</groupId>
+                <artifactId>sal-broker-impl</artifactId>
+                <version>1.0-SNAPSHOT</version>
+                <scope>test</scope>
+            </dependency>
 
             <!-- Models -->
             <dependency>
