--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -305,7 +305,7 @@
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>concepts</artifactId>
-            <version>0.6.0-SNAPSHOT</version>
+            <version>${yangtools.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
