--- a/bgp/parser-spi-config/pom.xml
+++ b/bgp/parser-spi-config/pom.xml
@@ -88,6 +88,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
+                        <Export-Package>*</Export-Package>
                     </instructions>
                 </configuration>
             </plugin>
