--- a/pcep/spi-config/pom.xml
+++ b/pcep/spi-config/pom.xml
@@ -55,6 +55,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
+                        <Export-Package>*</Export-Package>
                     </instructions>
                 </configuration>
             </plugin>
