Introduce AbstractPCEPSessionProposalFactory for reuse
Change-Id: Iaa4cf995a28b1a940c03e0f0cd0e99fe4b7a1ecf
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/pcep/impl/pom.xml
+++ b/pcep/impl/pom.xml
@@ -43,10 +43,12 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>pcep-ietf-stateful07</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>pcep-ietf-stateful02</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
