--- a/pcep/impl-config/pom.xml
+++ b/pcep/impl-config/pom.xml
@@ -52,6 +52,14 @@
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>netty-config-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>pcep-ietf-stateful07</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>pcep-ietf-stateful02</artifactId>
+        </dependency>
 
         <!--test dependencies -->
         <dependency>
