--- a/pcep/testtool/pom.xml
+++ b/pcep/testtool/pom.xml
@@ -50,6 +50,14 @@
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>protocol-framework</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>pcep-ietf-stateful07</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>pcep-ietf-stateful02</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.netty</groupId>
