Turn stateful/impl dependecies around
Change-Id: I91bfb1d6d208fcbfb5423c6d7c97297a80d7387b
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/pcep/ietf-stateful02/pom.xml
+++ b/pcep/ietf-stateful02/pom.xml
@@ -52,6 +52,10 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>pcep-tunnel-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>pcep-impl</artifactId>
+        </dependency>
 
         <!--
             FIXME: this is in support of the generated code. This should not
