--- a/pcep/ietf-stateful07/pom.xml
+++ b/pcep/ietf-stateful07/pom.xml
@@ -52,6 +52,10 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>pcep-tunnel-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>pcep-impl</artifactId>
+        </dependency>
 
         <!--
             FIXME: this is in support of the generated code. This should not
