BGPCEP controller distribution package
BGPCEP ZIP package contains base controller, bgp and pcep bundles

Change-Id: I8da6f7f7503cf8877960dfbc5b79b1ead6fee70b
Signed-off-by: Miroslav Miklus <mmiklus@cisco.com>
Signed-off-by: Robert Varga <rovarga@cisco.com>
Signed-off-by: Dana Kutenicsova <dkutenic@cisco.com>

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,9 @@
 
         <!-- Parents -->
         <module>commons/parent</module>
+
+        <!-- Distributions -->
+        <module>commons/distributions/bgpcep-controller</module>
     </modules>
 
     <build>
