--- a/commons/distributions/bgpcep-controller/pom.xml
+++ b/commons/distributions/bgpcep-controller/pom.xml
@@ -51,8 +51,8 @@
         <checkstyle.version>2.10</checkstyle.version>
         <testvm.argLine>-Xmx1024m -XX:MaxPermSize=256m</testvm.argLine>
         <osgi.core.version>5.0.0</osgi.core.version>
-        <ietf-yang-types.version>2010.09.24.3</ietf-yang-types.version>
-        <opendaylight-l2-types.version>2013.08.27.3</opendaylight-l2-types.version>
+        <ietf-yang-types.version>2010.09.24.4-SNAPSHOT</ietf-yang-types.version>
+        <opendaylight-l2-types.version>2013.08.27.4-SNAPSHOT</opendaylight-l2-types.version>
         <javassist.version>3.17.1-GA</javassist.version>
         <releaseplugin.version>2.3.2</releaseplugin.version>
         <commons.lang.version>3.1</commons.lang.version>
@@ -67,7 +67,7 @@
         <arphandler.version>0.5.2-SNAPSHOT</arphandler.version>
         <forwarding.staticrouting>0.5.2-SNAPSHOT</forwarding.staticrouting>
         <samples.loadbalancer>0.5.2-SNAPSHOT</samples.loadbalancer>
-        <netconf.version>0.2.4-SNAPSHOT</netconf.version>
+        <netconf.version>${controller.config.version}</netconf.version>
         <containermanager.version>0.5.2-SNAPSHOT</containermanager.version>
         <containermanager.it.version>0.5.2-SNAPSHOT</containermanager.it.version>
         <switchmanager.api.version>0.7.1-SNAPSHOT</switchmanager.api.version>
